logs/tikon.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tikon'...
Listing './lib/python3.5/site-packages/tikon/Clima'...
Listing './lib/python3.5/site-packages/tikon/Clima/PyKrige'...
Listing './lib/python3.5/site-packages/tikon/Cultivo'...
Listing './lib/python3.5/site-packages/tikon/Cultivo/ModExtern'...
Listing './lib/python3.5/site-packages/tikon/Cultivo/ModExtern/DSSAT'...
Listing './lib/python3.5/site-packages/tikon/Interfaz'...
Listing './lib/python3.5/site-packages/tikon/Manejo'...
Listing './lib/python3.5/site-packages/tikon/Matemáticas'...
Compiling './lib/python3.5/site-packages/tikon/Matemáticas/Unidades.py'...
*** Sorry: IndentationError: expected an indented block (Unidades.py, line 129)
Listing './lib/python3.5/site-packages/tikon/Paisaje'...
Compiling './lib/python3.5/site-packages/tikon/Paisaje/NuevaParcela.py'...
***   File "./lib/python3.5/site-packages/tikon/Paisaje/NuevaParcela.py", line 34
    símismo.receta['estr'][] =
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tikon/Proyectos'...
Listing './lib/python3.5/site-packages/tikon/Proyectos/Café'...
Listing './lib/python3.5/site-packages/tikon/Proyectos/Café/Leucoptera_coffeella'...
Listing './lib/python3.5/site-packages/tikon/Proyectos/Opisina_arenosella'...
Listing './lib/python3.5/site-packages/tikon/RAE'...
Listing './lib/python3.5/site-packages/tikon-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
